--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,53 @@
+ignore.txt
 
+# Инструкция для работы с Markdown 2 #
+
+## Выделение текста
+
+Чтобы выделить текст курсивом необходимо обрамить его звездочками (*) или знаком нижнего подчеркивания (_). Например, *вот так* или _вот так_.
+
+Чтобы выделить текст полужирным, необходимо обрамить его двойными звездочками (**) или двойным знаком нижнего подчеркивания (___). Например, **вот так** или __вот так___.
+
+Альтернативные способы выделения текста жирным или курсивом нужны для того, чтобы мы могли совмещать оба этих способа. Например, _текст может быть выделен курсивом и при этом быть **полужирным**_.
+
+## Списки
+
+Чтобы добавить ненумерованные списки, необходимо пункты выделить звездочкой (*) или знаком +. например, вот так:
+* Элемент 1.
+* Элемент 2.
+* Элемент 3.
++ Элемент 4.
+
+Чтобы добавить нумерованные списки, необходимо пункты просто пронумеровать. Например, вот так:
+1. Первый пункт.
+2. Второй пункт.
+
+
+## Работа с изображениями
+
+Чтобы вставить изображение в текст, достаточно написать следующее: 
+
+![Это выхухоль](Vihuhol.jpg)
+
+* В квадратных скобках - тот текст, который будет выводиться, если изображение не загрузится.
+* В круглых скобках - имя файла, из которого изображение нужно достать 
+
+## Заголовки
+Орг. Текст для отработки конфликта слияния1.
+
+Заголовки обозначаются значком # в начале и конце выделяемого слова / предложения. Бывают заголовки разных уровней - кегля. Чем меньше нужен кегль заголовка, тем больше # ставится вначале и конце. 
+
+## Блоки текста
+Чтобы создать новый блок текста (параграф), оставьте пустую строку между двумя строками текста.
+
+## Цитаты 
+Чтобы добавить цитату в начале новой строки ставится знак - >.
+> Первый уровень цитирования.
+>> Второй уровень цитирования.
+>>> Третий уровень цитирования.
+
+
+## Работа с таблицами
+Текст, введенный на GH для примера
+
+## Заключение
